--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ts-node": "10.3.0"
+    "ts-essentials": "^9.3.0"
   },
   "devDependencies": {
     "@types/node": "16.11.0",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
-    "@vitejs/plugin-react": "1.0.4",
-    "typescript": "4.4.4",
-    "vite": "2.6.7",
-    "vite-plugin-html-template": "1.0.6"
+    "@vitejs/plugin-react": "2.2.0",
+    "on-change": "^4.0.1",
+    "remeda": "^1.1.0",
+    "ts-node": "10.3.0",
+    "typescript": "^4.8.4",
+    "vite": "3.2.1"
   }
 }
